tests/golden/fixtures/syntax-preprocessor-sequence-and-data/expected.err
Error: invalid syntax: expected something else, '*', '+', '-', ':', ',', or '=', found number literal
    ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:10:7 ]
    │
 10 │     3 4
    │       ┬  
    │       ╰── here
────╯

Warning: invalid syntax: preprocessor directive not processed
   ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:2:1 ]
   │
 2 │ #if 1
   │ ──┬──  
   │   ╰──── here
───╯

Warning: invalid syntax: preprocessor directive not processed
   ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:4:1 ]
   │
 4 │ #else
   │ ──┬──  
   │   ╰──── here
───╯

Warning: invalid syntax: preprocessor directive not processed
   ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:6:1 ]
   │
 6 │ #endif
   │ ───┬──  
   │    ╰──── here
───╯

Error: invalid syntax: expected newline, ';', 'align', 'address', 'nocross', something else, '?', or '}', found '#'
    ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:13:1 ]
    │
 13 │ #else
    │ ┬  
    │ ╰── here
────╯

Warning: invalid syntax: preprocessor directive not processed
   ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:9:1 ]
   │
 9 │ #if !0
   │ ───┬──  
   │    ╰──── here
───╯

Error: invalid syntax: expected something else, '*', '+', '-', ':', ',', or '=', found number literal
    ╭─[ tests/golden/fixtures/syntax-preprocessor-sequence-and-data/input.k65:10:7 ]
    │
 10 │     3 4
    │       ┬  
    │       ╰── here
────╯
